I updated to version 0.1.1, I only fixed a bug on the page https://pypi.org/project/chromolog/, just that :)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <h1 class="title-header" title="chromolog project, Github"><a target="_blank"
         href="https://github.com/tutosrivegamerLQ/chromolog/">CHROMOLOG</a></h1>
-    <a href="https://pypi.org/project/chromolog/" target="_blank"><img class="img-nav img-repo-module"
+    <a href="https://pypi.org/project/chromolog/0.1.0/" target="_blank"><img class="img-nav img-repo-module"
         title="Package python. Pip install"
         src="https://cdn.jsdelivr.net/gh/tutosrivegamerLQ/images-projects-srm-trg@refs/heads/main/modules/chromalog_logo.webp"
         alt="Logo del proyecto 'chromolog'"></a>
